Removed .idea folder